Fixed the visible scrollbars

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,3 +124,12 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Edge */
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
